--- a/html/homepage.html
+++ b/html/homepage.html
@@ -13,13 +13,13 @@
 			<nav class="navbar navbar-inverse">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="#">Garble</a>
+						<a class="navbar-brand" href="#">This is Garble!</a>
 					</div>
 					<div>
-						<ul class="nav navbar-nav">
-							<li data-association='column1'><a href="#">Column 1</a></li>
-							<li data-association='column1'><a href="#">Column 2</a></li> 
-							<li data-association='column1'><a href="#">Column 3</a></li> 
+						<ul class="nav navbar-nav navbar-right">
+							<li data-association='leftColumn'><a href="#" id='navbarLeftColumn'>Left</a></li>
+							<li data-association='middleColumn'><a href="#" id='navbarMiddleColumn'>Middle</a></li> 
+							<li data-association='rightColumn'><a href="#" id='navbarRightColumn'>Right</a></li> 
 						</ul>
 					</div>
 				</div>
@@ -27,14 +27,16 @@
 			<div id='leftColumn' class='col-xs-4 well accordion disabled'>
 			</div>
 			<div id='middleColumn' class='col-xs-4'>
+				<!--
 				<div class='row'>
-					<h1>This is Garble!</h1>
+					<h1>Garble!</h1>
 					<ul class="nav nav-pills nav-justified">
 						<li><a data-toggle="pill" href="#">Column 1</a></li>
 						<li><a data-toggle="pill" href="#">Column 2</a></li>
 						<li><a data-toggle="pill" href="#">Column 3</a></li>
 					</ul>
 				</div>
+				-->
 				<div class='row'>
 					<div id='messageCenter'></div>
 				</div>
@@ -44,7 +46,7 @@
 							<!-- move these to javascript, verify then insert -->
 							<video id="video" width="320" height="240" autoplay></video>
 							<button id="snap" class="btn btn-default">Snap Photo</button>
-							<canvas id="canvas" width="320" height="240"></canvas>	
+							<canvas id="canvas" class='disabled' width="320" height="240"></canvas>	
 						</div>
 						<div class='row'>
 							<div id='gamerDashboard' class='btn-group-vertical well'>Turn this into the wall!</div>
